chore: Update meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A personal AI portfolio showcasing projects and skills.">
+    <meta name="keywords" content="AI, portfolio, personal projects, HTML, CSS, JavaScript, personal portfolio frontend portfolio, web development">
+    <meta name="author" content="Kapsarov Lazar">
+    <meta name="robots" content="index, follow">
+
+
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/3fbfd2189d.js" crossorigin="anonymous"></script>
     <!-- Google Fonts -->
